--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -187,3 +187,7 @@ body{
   background: rgba(255, 255, 255, 0.7);
   color: black;
 }
+.bootstrap-select button.btn {
+  border: 1px solid #dee2e6!important;
+  background-color: white!important;
+}
