Добавляем возможность помечать поля формы как системные. Помечаем slug как системное поле в страниц и записей.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -211,3 +211,12 @@ body{
   max-width: 120px;
   max-height: 120px;
 }
+
+label.system {
+  color: #777777 !important;
+  cursor: pointer;
+}
+
+label.system ~ .system-toggle {
+  display: none;
+}
