--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -7,6 +7,7 @@
     width: 100px;
     background: #1b1e21;
     margin-left: auto;
+    z-index: 100!important;
 }
 .content-wrapper{
     min-height: 100vh;
@@ -15,10 +16,10 @@
 }
 .form-field-description a{
     color: #cccccc!important;
-    border-bottom: 1px #cccccc dashed!important;;
-    text-decoration: none!important;;
+    border-bottom: 1px #cccccc dashed!important;
+    text-decoration: none!important;
 }
 .form-field-description a:hover{
-    color: #747474!important;;
-    border-bottom: 1px #747474 dashed!important;;
+    color: #747474!important;
+    border-bottom: 1px #747474 dashed!important;
 }
