Вывод сео заголовков в постах

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -161,6 +161,9 @@ body{
   color: #ffffff;
   overflow: hidden;
 }
+.panel-header a{
+  color: #ffffff;
+}
 .panel-content-wrapper{
   padding: 0 30px
 }
