--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,8 +14,8 @@
 }
 
 .fade-enter-active, .fade-leave-active {
-   transition: opacity .3s;
- }
+  transition: opacity .3s;
+}
 .fade-enter, .fade-leave-to {
   opacity: 0;
 }
@@ -32,26 +32,26 @@
 }
 
 body{
-    font-family: Montserrat!important;
-    font-size: 14px;
+  font-family: Montserrat!important;
+  font-size: 14px;
 }
 
 .main-wrapper{
   display: flex;
 }
 .fixed-sidebar-wrapper{
-    position: fixed;
-    height: 100vh;
-    width: 80px;
-    background: rgba(33, 33, 32, 1);
-    margin-left: auto;
-    -webkit-transition: width .3s;
-    transition: width .3s ;
-    z-index: 100;
-    box-shadow: 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35);
-    color: #ffffff;
-    overflow: hidden;
-  }
+  position: fixed;
+  height: 100vh;
+  width: 80px;
+  background: rgba(33, 33, 32, 1);
+  margin-left: auto;
+  -webkit-transition: width .3s;
+  transition: width .3s ;
+  z-index: 100;
+  box-shadow: 0 2px 22px 0 rgba(0,0,0,.2), 0 2px 30px 0 rgba(0,0,0,.35);
+  color: #ffffff;
+  overflow: hidden;
+}
 .fixed-sidebar-wrapper.open{
   overflow-y: auto;
   width: 260px;
@@ -85,10 +85,10 @@ body{
   color: #ffffff;
 }
 .fixed-sidebar-wrapper .main-menu{
-   list-style: none;
-   min-width: 260px;
-   padding: 15px;
- }
+  list-style: none;
+  min-width: 260px;
+  padding: 15px;
+}
 .fixed-sidebar-wrapper .sub-menu{
   list-style: none;
   padding-left: 0;
@@ -223,4 +223,14 @@ label.system {
 
 label.system ~ .system-toggle {
   display: none;
+}
+
+div.loading.preloader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 999;
 }
